<?xml version="1.0"?>
<package format="2">

  <name>bump_tolerant_control</name>
  <version>1.0.0</version>
  <description>The Example Waypoint Flier</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_managers</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
    <mrs_uav_managers plugin="${prefix}/plugins.xml"/>
  </export>

</package>